     the case of a single-file add-on
 * Miscellaneous and bug fixes:
   * Fixed compilation on all Debian architectures (Debian bug #636193)
   * Fixed handling of #ifver and #ifnver preprocessor directives in wmllint
   * Made it possible to switch themes from Preferences in the main menu
     (bug #10969)
   * Fixed preload event not being fired (bug #18695)

Version 1.9.9:
 * AI:
   * Fixed bug #16117: added a way to supress E_NOT_REACHED_DESTINATION to lua
   * Fixed bug #16247: modify SoF 8 to let the dragon attack aggressively
     api via an optional boolean parameter - ai.move_full(from,to_x,to_y,true)
   * Fixed bug #18057: AI leaders should now attack when they should
   * Fixed bug #18122: AI leaders set to defensive will now follow goals anyway
   * Fixed bug #18356: AI leaders now won't move to avoided keeps
   * Applied patch #2846 by thonsew: let AI forget about invisible enemy units
     in villages during get_villages phase (bug #18101)
 * Campaigns:
   * Fixed remaining deprecation warnings about empty side=
   * Under the Burning Suns:
     * Fixed Naga Sentinel gaining an AMLA after 32 XP instead of the usual 150
     * Gave to Desert Shydes and Desert Stars 30% defense on void terrain
 * Engine:
   * Fixed bug #16173: Using n or cl while a fake unit is moving causes the game
     to segfault by creating game_display::fake_unit as an exception safe
     interace to the fake_units
   * Improved unit_map lookup from std::map to boost::unordered_map to decrease
     lookup times
   * Fixed bug #16151: Discover new units on recruit
   * Fixed bug #17780: Allow objects to 'increase' damage to 0
   * Fixed bug #18098: now recruits and recalls capture village if recruited or
     recalled on village castle hex
 * Graphics:
   * Fixed bug #18524: [replace_map] doesn't force window repainting
   * Fixed bugs #18504 #18493 and #18017: Time of Day and fading interact poorly
   * Fixed bugs #18475 and #17292: Mage of Light and Sorceress Halo/animation