@@ -52,6 +52,8 @@ Version 1.9.9+svn:
    * Made it possible to switch themes from Preferences in the main menu
      (bug #10969)
    * Fixed preload event not being fired (bug #18695)
+   * Make the create unit dialog give the created unit a valid gender for
+     that unit type. (bug #18704)
 
 Version 1.9.9:
  * AI:
